--- a/dags/Healthcare_Data/compose.yml
+++ b/dags/Healthcare_Data/compose.yml
@@ -1,16 +1,16 @@
 services:
   postgres:
-    image: postgres:12-alpine
-    container_name: weather_db
+    image: postgres:13
+    container_name: health_db
     restart: always
     ports:
       - "5432:5432"
     env_file:
       - variables.env
     volumes:
-      - /home/mumo/dataprojects/Weather_Data/postgres-volume:/var/lib/postgresql/data
+      - ./home/mumo/dataprojects/dags/Healthcare_Data/project-volume:/var/lib/postgresql/data
     networks:
-      - weather_db_net
+      - health_db_net
 
 #for docker managed volume
 #volumes:
@@ -19,4 +19,4 @@ services:
 # to copy data from host directory to container docker cp /path/to/host/directory weather_db:/path/to/container/directory
 
 networks:
-  weather_db_net:
+  health_db_net:
