A rewrite of the readme file

--- a/airflow/dags/Healthcare_Data/compose.yml
+++ b/airflow/dags/Healthcare_Data/compose.yml
@@ -1,6 +1,7 @@
 services:
   postgres:
     image: postgres:13
+    container_name: postgres_health
     restart: always
     env_file:
       - .env 
